# vlex

./: .gitignore  CMakeLists.txt  LICENSE  example.vlex
include/diagnostic/: Diagnostic.h
include/generator/: Generator.h  Symbol.h
include/lexer/: Lexer.h  SourceLocation.h  Token.h
include/parser/: Parser.h
include/templates/: CharLiteralParseCPP.h  IdentifierParseCPP.h  IntegerLiteralParseCPP.h  KeywordParseCPP.h  Lexer1CPP.h  Lexer2CPP.h  LexerH.h  SourceLocationCPP.h  SourceLocationH.h  StringLiteralParseCPP.h  Token1CPP.h  Token2CPP.h  TokenH.h
source/: main.cpp
source/diagnostic/: Diagnostic.cpp
source/generator/: Generator.cpp
source/lexer/: Lexer.cpp  SourceLocation.cpp  Token.cpp
source/parser/: Parser.cpp
templates/: IdentifierParse.cpp  KeywordParse.cpp  Lexer.cpp  Lexer.h  Lexer1.cpp  Lexer2.cpp  SourceLocation.cpp  SourceLocation.h  Token.h  Token1.cpp  Token2.cpp
